@@ -1,3 +1,8 @@
+2009-11-19  Milan Zamazal  <pdm@brailcom.org>
+
+	* tools/genmenu.py:
+	Add help texts to genmenu command line options.
+
 2009-11-16  Milan Zamazal  <pdm@brailcom.org>
 
 	* lib/pytis/form/application.py:
